# datanexus

./: COURSE_OUTLINE.md  README.md  main.py  pyproject.toml  python_tutorial.ipynb  tester.py
.devcontainer/: devcontainer.json
python/: a_basics.ipynb  b_opp.ipynb  books.db  c_file_handling_and_exceptions.ipynb  d_python_specific_concepts.ipynb  e_concurrency_managment.ipynb  f_backend.ipynb
python/utils/: tester.py
videos/: COURSE_COMPLETION_REPORT.md  README.md  complete_programming_tutorial.py  complete_python_course.py  course_launcher.py  first_3b1b_style.py  module0_channel_welcome.py  module0_channel_welcome_backup.py  module10_project_development.py  module1_computer_fundamentals.py  module2_programming_logic.py  module3_introduction_to_python.py  module4_core_python_concepts.py  module5_functions_and_modules.py  module6_object_oriented_programming.py  module7_file_handling_error_management.py  module8_advanced_python_features.py  module9_libraries_frameworks.py  python_intro_complete.py  requirements.txt  test_tutorial.py  tutorial_preview.py
